# stonescript-language-server

./: .gitattributes  .gitignore  Cargo.toml  README.md  analyze_results.sh  test_all_scripts.sh  test_consecutive_conditions.ss  test_integration.sh  test_simple_func.ss  test_two_conditions.txt
crates/stonescript-lsp/: Cargo.toml
crates/stonescript-lsp/src/: lib.rs  main.rs  server.rs
crates/stonescript-lsp/src/data/: abilities.rs  filters.rs  foes.rs  game_state.rs  keywords.rs  locations.rs  mod.rs  music.rs  native_functions.rs  sounds.rs  ui.rs
crates/stonescript-lsp/src/providers/: completion.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  mod.rs  semantic_tokens.rs  signature_help.rs  symbols.rs
crates/stonescript-lsp/tests/: test_chisel_hover.rs  test_definition.rs  test_hover.rs  test_semantic_tokens.rs
crates/stonescript-parser/: Cargo.toml  build.rs
crates/stonescript-parser/examples/: debug.rs  debug_parse.rs
crates/stonescript-parser/src/: ast.rs  lib.rs  parser.rs
crates/stonescript-parser/tests/: debug_killerrpg.rs  integration_test.rs  test_all_scripts.rs  test_array_ascii_diagnosis.rs  test_ascii_array_issue.rs  test_ascii_backslash.rs  test_ascii_backslash_debug.rs  test_ascii_indent.rs  test_ascii_output.rs  test_ascii_stages.rs  test_bunny_debug.rs  test_caret_continuation_issue.rs  test_color_literal.rs  test_comment_continuation.rs  test_comment_positions.rs  test_complex_conditionals_issue.rs  test_complex_expr.rs  test_debug.rs  test_elseif.rs  test_em_dash_issue.rs  test_emdash_ascii_array.rs  test_escaped_quotes_issue.rs  test_escaped_strings.rs  test_exact_line.rs  test_facehud.rs  test_facehud_debug.rs  test_for_in_loops.rs  test_fullwidth_brackets.rs  test_fullwidth_quotes.rs  test_just_ascii.rs  test_killerrpg_ascii_pattern.rs  test_killerrpg_file.rs  test_killerrpg_file_full.rs  test_killerrpg_fragment.rs  test_killerrpg_snippet.rs  test_line_continuation.rs  test_mech_file.rs  test_multi_ascii_fullwidth_array.rs  test_multiline_ascii.rs  test_multiple_ascii_blocks.rs  (+30 more)
(+152 files in other folders)
