[workspace]
members = [
    "crates/stonescript-parser",
    "crates/stonescript-lsp",
]
exclude = ["zed-stonescript"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["StoneScript LSP Contributors"]
license = "MIT"
repository = "https://github.com/kurbezz/stonescript-language-server"

[workspace.dependencies]
# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Text handling
ropey = "1.6"

# Parsing - using nom instead of tree-sitter
nom = "7.1"

# Concurrency
dashmap = "5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
