[package]
name = "stonescript-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stonescript-lsp"
path = "src/main.rs"

[lib]
name = "stonescript_lsp"
path = "src/lib.rs"


[dependencies]
# LSP
tower-lsp = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Text
ropey = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Parser
stonescript-parser = { path = "../stonescript-parser" }

# Regex
regex = "1"

[dev-dependencies]
stonescript-parser = { path = "../stonescript-parser" }
