[package]
name = "stonescript-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Parser library
nom = "7.1"

# Optional serialization support
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
walkdir = "2.4"

[features]
default = []
serde = ["dep:serde"]

[lib]
path = "src/lib.rs"
